--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@react-navigation/stack": "^6.3.14",
     "axios": "^1.3.3",
     "expo": "~47.0.12",
+    "expo-image-picker": "~14.0.2",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-drawer": "^2.5.1",
     "react-native-gesture-handler": "~2.8.0",
+    "react-native-image-picker": "^5.1.0",
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "^3.20.0",
