--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.5.5",
     "@react-navigation/drawer": "^5.x",
@@ -17,6 +18,7 @@
     "@react-navigation/stack": "^6.3.14",
     "axios": "^1.3.3",
     "expo": "~47.0.12",
+    "expo-blur": "~12.0.1",
     "expo-image-picker": "~14.0.2",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
@@ -28,7 +30,9 @@
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "^3.20.0",
     "react-native-swiper": "^1.6.0",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-vector-icons": "^9.2.0",
+    "react-redux": "^7.2.5",
+    "redux": "^4.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
