--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-drawer": "^2.5.1",
+    "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-image-picker": "^5.1.0",
     "react-native-reanimated": "~2.12.0",
