--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "@react-navigation/native-stack": "^6.9.10",
     "@react-navigation/stack": "^6.3.14",
     "axios": "^1.3.3",
+    "eases": "^1.0.8",
     "expo": "~47.0.12",
     "expo-blur": "~12.0.1",
     "expo-image-picker": "~14.0.2",
     "expo-status-bar": "~1.4.2",
+    "gsap": "^3.11.5",
+    "node-sass": "^8.0.0",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-drawer": "^2.5.1",
